[gd_scene load_steps=2 format=3 uid="uid://cuigf1ue82lmm"]

[ext_resource type="Script" uid="uid://d2wctq5smf5vp" path="res://script/deck_main_scene.gd" id="1_nfh05"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_nfh05")

[node name="Deck_container" type="VBoxContainer" parent="."]
offset_left = 64.0
offset_top = 36.0
offset_right = 586.0
offset_bottom = 459.0

[node name="Button_new_deck" type="Button" parent="."]
offset_left = 764.0
offset_top = 203.0
offset_right = 869.0
offset_bottom = 261.0
text = "New Deck"

[node name="SelectedDeck" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="LineEdit" type="LineEdit" parent="."]
offset_left = 737.0
offset_top = 167.0
offset_right = 918.0
offset_bottom = 198.0
